Bug 1564900 - [OS.File] Fix size of statvfs::f_frsize. r=Yoric, a=RyanVM

Make Firefox not assume type of member statvfs::f_frsize from sys head, which may vary

Differential Revision: https://phabricator.services.mozilla.com/D38306